# job_candidate_profile_matching_crewai

./: README.md  pyproject.toml  report.md
src/job_candidate/: crew.py  main.py
src/job_candidate/config/: agents.yaml  tasks.yaml
